// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Disclosure ExpandableSection 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-expandable-section pf-m-display-lg pf-m-limit-width"
  >
    <div
      class="pf-v6-c-expandable-section__toggle"
    >
      <button
        aria-controls="content-id"
        class="pf-v6-c-button pf-m-link"
        data-ouia-component-id="OUIA-Generated-Button-link-:rh:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        id="toggle-id"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <span
            class="pf-v6-c-expandable-section__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 32 32"
              width="1em"
            >
              <path
                d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-labelledby="toggle-id"
      class="pf-v6-c-expandable-section__content"
      hidden=""
      id="content-id"
      role="region"
    >
      test 
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExpandableSection 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-expandable-section"
  >
    <div
      class="pf-v6-c-expandable-section__toggle"
    >
      <button
        aria-controls="content-id"
        class="pf-v6-c-button pf-m-link"
        data-ouia-component-id="OUIA-Generated-Button-link-:r2:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        id="toggle-id"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <span
            class="pf-v6-c-expandable-section__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 32 32"
              width="1em"
            >
              <path
                d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-labelledby="toggle-id"
      class="pf-v6-c-expandable-section__content"
      hidden=""
      id="content-id"
      role="region"
    >
      test 
    </div>
  </div>
</DocumentFragment>
`;

exports[`Renders ExpandableSection expanded 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-expandable-section pf-m-expanded"
  >
    <div
      class="pf-v6-c-expandable-section__toggle"
    >
      <button
        aria-controls="content-id"
        aria-expanded="true"
        class="pf-v6-c-button pf-m-link"
        data-ouia-component-id="OUIA-Generated-Button-link-:r5:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        id="toggle-id"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <span
            class="pf-v6-c-expandable-section__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 32 32"
              width="1em"
            >
              <path
                d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-labelledby="toggle-id"
      class="pf-v6-c-expandable-section__content"
      id="content-id"
      role="region"
    >
       test 
    </div>
  </div>
</DocumentFragment>
`;

exports[`Renders ExpandableSection indented 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-expandable-section pf-m-expanded pf-m-indented"
  >
    <div
      class="pf-v6-c-expandable-section__toggle"
    >
      <button
        aria-controls="content-id"
        aria-expanded="true"
        class="pf-v6-c-button pf-m-link"
        data-ouia-component-id="OUIA-Generated-Button-link-:rk:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        id="toggle-id"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <span
            class="pf-v6-c-expandable-section__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 32 32"
              width="1em"
            >
              <path
                d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-labelledby="toggle-id"
      class="pf-v6-c-expandable-section__content"
      id="content-id"
      role="region"
    >
       test 
    </div>
  </div>
</DocumentFragment>
`;

exports[`Renders Uncontrolled ExpandableSection 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-expandable-section"
  >
    <div
      class="pf-v6-c-expandable-section__toggle"
    >
      <button
        aria-controls="content-id"
        class="pf-v6-c-button pf-m-link"
        data-ouia-component-id="OUIA-Generated-Button-link-:re:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        id="toggle-id"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon pf-m-start"
        >
          <span
            class="pf-v6-c-expandable-section__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 32 32"
              width="1em"
            >
              <path
                d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
              />
            </svg>
          </span>
        </span>
        <span
          class="pf-v6-c-button__text"
        >
          Show More
        </span>
      </button>
    </div>
    <div
      aria-labelledby="toggle-id"
      class="pf-v6-c-expandable-section__content"
      hidden=""
      id="content-id"
      role="region"
    >
       test 
    </div>
  </div>
</DocumentFragment>
`;
